--- a/index.html
+++ b/index.html
@@ -17,78 +17,28 @@
   <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-
       <!-- Logo y botón de navegación para dispositivos móviles -->
-      <a class="navbar-brand" href="#">PamPins</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Menú de navegación -->
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Filtros:</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Precio
-            </a>
-
-            <!-- Opciones de filtro para Precio -->
-            <ul class="dropdown-menu" id="filter__precio">
-              <li><a class="dropdown-item">Ascendente</a></li>
-              <li><a class="dropdown-item">Descendente</a></li>
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Nombre
-            </a>
-
-            <!-- Opciones de filtro para Nombre -->
-            <ul class="dropdown-menu" id="filter__nombre">
-              <li><a class="dropdown-item">Ascendente</a></li>
-              <li><a class="dropdown-item">Descendente</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Categoria
-            </a>
-
-            <!-- Opciones de filtro para Categoría -->
-            <ul class="dropdown-menu" id="filter__lista">
-              <li><a class="dropdown-item" href="#">Harry Potter</a></li>
-              <li><a class="dropdown-item" href="#">Fútbol</a></li>
-              <li><a class="dropdown-item">Simpsons</a></li>
-              <li><a class="dropdown-item" href="#">Todos</a></li>
-            </ul>
-          </li>
-        </ul>
+      <a class="navbar-brand">
+        <img src="./img/pampins.png" alt="PamPins Logo" style="width: 100px;">
+        <!-- Ajusta el ancho según tus necesidades -->
+      </a>
+      <div id="btnCarrito" style="margin-right: 20px">
+        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-cart"
+          viewBox="0 0 16 16">
+          <path
+            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+        </svg>
+        <p id="contador__carrito"></p>
       </div>
     </div>
 
-    <!-- Elemento de barra de navegación para el inicio de sesión del usuario -->
-    <div id="userLogin" class="nav-item"></div>
-
     <!-- Botón del carrito de compras -->
-    <div id="btnCarrito" style="margin-right: 20px">
-      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-cart"
-        viewBox="0 0 16 16">
-        <path
-          d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-      </svg>
-      <p id="contador__carrito"></p>
-    </div>
+    
   </nav>
 
   <!-- Contenido principal de la página -->
   <main>
-    <!-- Texto de búsqueda -->
-    <p>Busque su producto aqui</p>
+    <h2>Elija el Pins que mas te gusta!!</h2>
 
     <!-- Contenedor de productos -->
     <div id="productos" class="row row-cols-1 row-cols-md-2 row-cols-xl-3 row-cols-xxl-4"></div>
@@ -100,7 +50,7 @@
       <table class="table table-secondary text-center align-middle table-sm table-borderless">
         <thead>
           <tr>
-            <th class="w-auto p-3 h-auto d-inline-block">Imagen</th>
+            <th class="w-auto p-3 h-auto d-inline-block"> </th>
             <th>Nombre</th>
             <th>Unidades</th>
             <th>Costo Unitario</th>
@@ -113,9 +63,15 @@
       </table>
     </div>
 
-    <!-- Campo de entrada para filtrar productos -->
-    <input type="text" id="filter__input">
-
+    <footer class="text-center align-middle mt-3">
+      <div>
+        <a href="https://www.instagram.com/pam.pins/">
+          <img src="img/instagram.svg" width="40px" alt="instagram"></a>
+          <h3>PamPins 2024</h3>
+      </div>
+        <h5> Todos los derechos reservados </h5>
+      </div>
+    </footer>
     <!-- Scripts sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -132,6 +88,7 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"></script>
   </main>
+
 </body>
 
 </html>
