--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
   <!-- Contenido principal de la página -->
   <main>
-    <h2>Elija el Pins que mas te gusta!!</h2>
+    <h2 class="p-3">Elije el Pin que mas te gusta!!</h2>
 
     <!-- Contenedor de productos -->
-    <div id="productos" class="row row-cols-1 row-cols-md-2 row-cols-xl-3 row-cols-xxl-4"></div>
+    <div id="productos" class="p-5 row row-cols-1 row-cols-md-2 row-cols-xl-3 row-cols-xxl-4"></div>
 
     <!-- Contenedor del carrito de compras -->
     <div id="carrito">
@@ -50,7 +50,7 @@
       <table class="table table-secondary text-center align-middle table-sm table-borderless">
         <thead>
           <tr>
-            <th class="w-auto p-3 h-auto d-inline-block"> </th>
+            <th class="w-auto p-2 h-auto d-inline-block"> Pin Seleccionado </th>
             <th>Nombre</th>
             <th>Unidades</th>
             <th>Costo Unitario</th>
